--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.14.0
+appnope==0.1.2
 argon2-cffi==21.1.0
 astunparse==1.6.3
 attrs==21.2.0
@@ -10,6 +11,7 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
 clang==5.0
+cloudpickle==2.0.0
 cycler==0.10.0
 debugpy==1.4.3
 decorator==5.1.0
@@ -41,6 +43,7 @@ jupyterlab-widgets==1.0.2
 keras==2.6.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
+llvmlite==0.37.0
 Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.3
@@ -51,6 +54,7 @@ nbconvert==6.2.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.4
+numba==0.54.1
 numpy==1.19.5
 oauthlib==3.1.1
 opt-einsum==3.3.0
@@ -84,8 +88,10 @@ scikit-learn==1.0
 scipy==1.7.1
 seaborn==0.11.2
 Send2Trash==1.8.0
+shap==0.39.0
 six==1.15.0
 sklearn==0.0
+slicer==0.0.7
 tenacity==8.0.1
 tensorboard==2.6.0
 tensorboard-data-server==0.6.1
@@ -97,6 +103,7 @@ terminado==0.12.1
 testpath==0.5.0
 threadpoolctl==2.2.0
 tornado==6.1
+tqdm==4.62.3
 traitlets==5.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.7
@@ -105,4 +112,4 @@ webencodings==0.5.1
 Werkzeug==2.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
-xgboost==1.4.2
+xgboost==1.5.0
