--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
 mistune==0.8.4
+mlxtend==0.19.0
 nbclient==0.5.4
 nbconvert==6.2.0
 nbformat==5.1.3
